Bug 707814 - Awesomebar autocomplete box appears in the wrong place [r=mstange, a=akeybl]